CR-2002-06-13-3: Testsuite: enhanced qstat test for -l/-q/-pe/-U option tests
                 Issue:     #286

AH-2002-06-12-0: Bugfix:    Prevent use of soft requests for consumables. This
                            addresses problems related to IZ #223 / BT #4700286. 
                            However it does not introduce debitation for soft
                            resource requests.

CR-2002-06-12-0: Testsuite: new testsuite checks (merge from MT)
                 Issue:     #140
                 Issue:     #141
                 Issue:     #171

EB-2002-06-11-0: Bugfix:    qstat shows waiting jobs of other PEs
                 Issue:     #284
                 Bugtraq:   #4699665
                 Changed:   qstat

AH-2002-06-10-0: Bugfix:    Complex default value was not used for load thresholds
                            in cases when no load value was available.
                 Issue:     #223
                 Bugtraq:   #4700286

EB-2002-06-07-0: Bugfix:    disallow "none" in load_formula and addition
                            tests for the correctness
                 Issue:     #215
                 Bugtraq:   #4673738
                 Changed:   sge_qmaster

AH-2002-06-05-0: Bugfix:    Prevent qalter -l res=val on running jobs for 
                            consumable resources to prevent corruption of 
                            consumable managment 
                 Issue:     #251
                 Bugtraq:   #4683852

JG-2002-06-06-0: Bugfix:    Building Grid Engine with shared libs was broken. 

AH-2002-06-05-0: Bugfix:    Fix problem with notify mechanism causing actual 
                            termination/suspension signal being delayed 
                            endlessly
                 Issue:     #231
                 Bugtraq:   #4697491

JG-2002-06-05-2: Bugfix:    qsub allowed submission of binary files
                 Issue:     #247
                 Bugtraq:   #4696768
